--- a/server-api/package.json
+++ b/server-api/package.json
@@ -21,5 +21,12 @@
   "homepage": "https://github.com/anoukvanbogaert/FlandriaServicePage#readme",
   "devDependencies": {
     "nodemon": "^2.0.20"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "morgan": "^1.10.0",
+    "sass": "^1.57.1"
   }
 }
