--- a/server-api/package.json
+++ b/server-api/package.json
@@ -1,9 +1,8 @@
 {
   "name": "service-page",
   "version": "1.0.0",
-  "proxy": "http://localhost:5000",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server"
@@ -23,6 +22,7 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
