--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.15",
+    "@mui/x-data-grid": "^7.3.2",
     "@mui/x-date-pickers": "^7.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -17,6 +18,7 @@
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
     "firebase": "^9.18.0",
+    "mui-datatables": "^4.3.0",
     "node-sass": "^7.0.3",
     "pullstate": "^1.25.0",
     "react": "^18.2.0",
